Intalação do Prisma para DB

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,7 @@
   --primary-color: #0024f3;
   --secondary-color: #e94c04;
   --text-primary: #000000;
-  --text-secondary: #6d5b5b;
+  --text-secondary: #333333;
   --shadow: rgba(0, 0, 0, 0.12);
 }
 
